--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorTracoDivisao">#8A8A8A</color>
     <color name="colorTituloHint">#9B9B9B</color>
+    <color name="colorCinzaClaro">#D7D7D7</color>
+    <color name="colorBranco">#FBFBFB</color>
 </resources>
