--- a/app/src/main/res/layout/activity_resultados.xml
+++ b/app/src/main/res/layout/activity_resultados.xml
@@ -573,40 +573,19 @@
                             android:showDividers="middle">
 
                             <TextView
-                                android:id="@+id/textView81"
+                                android:id="@+id/t1Dim9e5"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:background="@color/colorCinzaClaro"
+                                android:foregroundGravity="center"
                                 android:gravity="center"
-                                android:text="38,00"
-                                app:layout_column="5"
+                                android:text=" 9,50"
+                                app:layout_column="1"
                                 app:layout_row="1" />
 
                             <TextView
-                                android:id="@+id/textView80"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:background="@color/colorCinzaClaro"
-                                android:gravity="center"
-                                android:text="32,00"
-                                app:layout_column="4"
-                                app:layout_row="1" />
-
-                            <TextView
-                                android:id="@+id/textView79"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:background="@color/colorCinzaClaro"
-                                android:gravity="center"
-                                android:text="25,00"
-                                app:layout_column="3"
-                                app:layout_row="1" />
-
-                            <TextView
-                                android:id="@+id/textView78"
+                                android:id="@+id/t1Dim19"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
@@ -617,16 +596,38 @@
                                 app:layout_row="1" />
 
                             <TextView
-                                android:id="@+id/textView77"
+                                android:id="@+id/t1Dim25"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:background="@color/colorCinzaClaro"
-                                android:foregroundGravity="center"
                                 android:gravity="center"
-                                android:text=" 9,50"
-                                app:layout_column="1"
+                                android:text="25,00"
+                                app:layout_column="3"
                                 app:layout_row="1" />
+
+                            <TextView
+                                android:id="@+id/t1Dim32"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:background="@color/colorCinzaClaro"
+                                android:gravity="center"
+                                android:text="32,00"
+                                app:layout_column="4"
+                                app:layout_row="1" />
+
+                            <TextView
+                                android:id="@+id/t1Dim38"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:background="@color/colorCinzaClaro"
+                                android:gravity="center"
+                                android:text="38,00"
+                                app:layout_column="5"
+                                app:layout_row="1" />
+
                         </LinearLayout>
                     </LinearLayout>
 
@@ -640,7 +641,7 @@
                     android:showDividers="middle">
 
                     <TextView
-                        android:id="@+id/textView82"
+                        android:id="@+id/t1Abat40a60"
                         android:layout_width="80dp"
                         android:layout_height="wrap_content"
                         android:background="@color/colorCinzaClaro"
@@ -650,7 +651,7 @@
                         app:layout_row="2" />
 
                     <TextView
-                        android:id="@+id/textView85"
+                        android:id="@+id/t1c00"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -660,7 +661,7 @@
                         app:layout_row="2" />
 
                     <TextView
-                        android:id="@+id/textView86"
+                        android:id="@+id/t1c01"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -670,7 +671,7 @@
                         app:layout_row="2" />
 
                     <TextView
-                        android:id="@+id/textView87"
+                        android:id="@+id/t1c02"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -680,7 +681,7 @@
                         app:layout_row="2" />
 
                     <TextView
-                        android:id="@+id/textView88"
+                        android:id="@+id/t1c03"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -690,7 +691,7 @@
                         app:layout_row="2" />
 
                     <TextView
-                        android:id="@+id/textView89"
+                        android:id="@+id/t1c04"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -708,7 +709,7 @@
                     android:showDividers="middle">
 
                     <TextView
-                        android:id="@+id/textView96"
+                        android:id="@+id/t1Abat60a80"
                         android:layout_width="80dp"
                         android:layout_height="wrap_content"
                         android:background="@color/colorCinzaClaro"
@@ -718,7 +719,7 @@
                         app:layout_row="3" />
 
                     <TextView
-                        android:id="@+id/textView91"
+                        android:id="@+id/t1c10"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -728,7 +729,7 @@
                         app:layout_row="3" />
 
                     <TextView
-                        android:id="@+id/textView92"
+                        android:id="@+id/t1c11"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -738,7 +739,7 @@
                         app:layout_row="3" />
 
                     <TextView
-                        android:id="@+id/textView93"
+                        android:id="@+id/t1c12"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -748,7 +749,7 @@
                         app:layout_row="3" />
 
                     <TextView
-                        android:id="@+id/textView94"
+                        android:id="@+id/t1c13"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -758,7 +759,7 @@
                         app:layout_row="3" />
 
                     <TextView
-                        android:id="@+id/textView95"
+                        android:id="@+id/t1c14"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -777,7 +778,7 @@
                     android:showDividers="middle">
 
                     <TextView
-                        android:id="@+id/textView97"
+                        android:id="@+id/t1Abat80a100"
                         android:layout_width="80dp"
                         android:layout_height="wrap_content"
                         android:background="@color/colorCinzaClaro"
@@ -787,7 +788,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView99"
+                        android:id="@+id/t1c20"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -797,7 +798,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView103"
+                        android:id="@+id/t1c21"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -807,7 +808,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView104"
+                        android:id="@+id/t1c22"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -817,7 +818,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView101"
+                        android:id="@+id/t1c23"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -827,7 +828,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView105"
+                        android:id="@+id/t1c24"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
