--- a/app/src/main/res/layout/activity_resultados.xml
+++ b/app/src/main/res/layout/activity_resultados.xml
@@ -1055,7 +1055,7 @@
                         app:layout_row="2" />
 
                     <TextView
-                        android:id="@+id/textView185"
+                        android:id="@+id/t2c00"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1065,7 +1065,7 @@
                         app:layout_row="2" />
 
                     <TextView
-                        android:id="@+id/textView186"
+                        android:id="@+id/t2c01"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1075,7 +1075,7 @@
                         app:layout_row="2" />
 
                     <TextView
-                        android:id="@+id/textView187"
+                        android:id="@+id/t2c02"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1085,7 +1085,7 @@
                         app:layout_row="2" />
 
                     <TextView
-                        android:id="@+id/textView188"
+                        android:id="@+id/t2c03"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1095,7 +1095,7 @@
                         app:layout_row="2" />
 
                     <TextView
-                        android:id="@+id/textView189"
+                        android:id="@+id/t2c04"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1123,7 +1123,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView199"
+                        android:id="@+id/t2c10"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1133,7 +1133,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView1103"
+                        android:id="@+id/t2c11"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1143,7 +1143,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView1104"
+                        android:id="@+id/t2c12"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1153,7 +1153,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView1101"
+                        android:id="@+id/t2c13"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1163,7 +1163,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView1105"
+                        android:id="@+id/t2c14"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1192,7 +1192,7 @@
                         app:layout_row="3" />
 
                     <TextView
-                        android:id="@+id/textView191"
+                        android:id="@+id/t2c20"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1202,7 +1202,7 @@
                         app:layout_row="3" />
 
                     <TextView
-                        android:id="@+id/textView192"
+                        android:id="@+id/t2c21"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1212,7 +1212,7 @@
                         app:layout_row="3" />
 
                     <TextView
-                        android:id="@+id/textView193"
+                        android:id="@+id/t2c22"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1222,7 +1222,7 @@
                         app:layout_row="3" />
 
                     <TextView
-                        android:id="@+id/textView194"
+                        android:id="@+id/t2c23"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1232,7 +1232,7 @@
                         app:layout_row="3" />
 
                     <TextView
-                        android:id="@+id/textView195"
+                        android:id="@+id/t2c24"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1261,7 +1261,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView1990"
+                        android:id="@+id/t2c30"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1271,7 +1271,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView11030"
+                        android:id="@+id/t2c31"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1281,7 +1281,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView11040"
+                        android:id="@+id/t2c32"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1291,7 +1291,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView11010"
+                        android:id="@+id/t2c33"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1301,7 +1301,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView11050"
+                        android:id="@+id/t2c34"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1330,7 +1330,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView199011"
+                        android:id="@+id/t2c40"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1340,7 +1340,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView1103011"
+                        android:id="@+id/t2c41"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1350,7 +1350,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView1104011"
+                        android:id="@+id/t2c42"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1360,7 +1360,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView1101011"
+                        android:id="@+id/t2c43"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1370,7 +1370,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView1105011"
+                        android:id="@+id/t2c44"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1399,7 +1399,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView199012"
+                        android:id="@+id/t2c50"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1409,7 +1409,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView1103012"
+                        android:id="@+id/t2c51"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1419,7 +1419,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView1104012"
+                        android:id="@+id/t2c52"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1429,7 +1429,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView1101012"
+                        android:id="@+id/t2c53"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1439,7 +1439,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView1105012"
+                        android:id="@+id/t2c54"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1468,7 +1468,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView199013"
+                        android:id="@+id/t2c60"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1478,7 +1478,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView1103013"
+                        android:id="@+id/t2c61"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1488,7 +1488,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView1104013"
+                        android:id="@+id/t2c62"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1498,7 +1498,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView1101013"
+                        android:id="@+id/t2c63"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1508,7 +1508,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView1105013"
+                        android:id="@+id/t2c64"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1537,7 +1537,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView199014"
+                        android:id="@+id/t2c70"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1547,7 +1547,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView1103014"
+                        android:id="@+id/t2c71"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1557,7 +1557,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView1104014"
+                        android:id="@+id/t2c72"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1567,7 +1567,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView1101014"
+                        android:id="@+id/t2c73"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1577,7 +1577,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView1105014"
+                        android:id="@+id/t2c74"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1606,7 +1606,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView19901"
+                        android:id="@+id/t2c80"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1616,7 +1616,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView110301"
+                        android:id="@+id/t2c81"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1626,7 +1626,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView110401"
+                        android:id="@+id/t2c82"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1636,7 +1636,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView110101"
+                        android:id="@+id/t2c83"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1646,7 +1646,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView110501"
+                        android:id="@+id/t2c84"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1675,7 +1675,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView199015"
+                        android:id="@+id/t2c90"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1685,7 +1685,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView1103015"
+                        android:id="@+id/t2c91"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1695,7 +1695,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView1104015"
+                        android:id="@+id/t2c92"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1705,7 +1705,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView1101015"
+                        android:id="@+id/t2c93"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -1715,7 +1715,7 @@
                         app:layout_row="4" />
 
                     <TextView
-                        android:id="@+id/textView1105015"
+                        android:id="@+id/t2c94"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
