--- a/app/src/main/res/layout/activity_resultados.xml
+++ b/app/src/main/res/layout/activity_resultados.xml
@@ -483,7 +483,7 @@
             android:text="Visualizar curva de Abrams" />
 
         <com.github.mikephil.charting.charts.LineChart
-            android:id="@+id/curvaDeAbrams"
+            android:id="@+id/graficoCurvaDeAbrams"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_marginLeft="28dp"
