--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#FFC107</color>
+    <color name="colorGrafico">#FFB300</color>
     <color name="colorTracoDivisao">#8A8A8A</color>
     <color name="colorTituloHint">#9B9B9B</color>
     <color name="colorCinzaClaro">#D7D7D7</color>
