Correção da exibição do tipo de traço na tela de resultados, modificação da aparência da tela de traços salvos e inserção do cálculo do traço pra 1 m³ de concreto na tela de resultados.

--- a/app/src/main/res/layout/lista_traco_adapter.xml
+++ b/app/src/main/res/layout/lista_traco_adapter.xml
@@ -8,7 +8,10 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="2dp"
+        android:background="#303030"
+        android:hapticFeedbackEnabled="true"
         android:paddingBottom="8dp">
 
         <TextView
@@ -17,19 +20,25 @@
             android:layout_height="wrap_content"
             android:padding="8dp"
             android:text="Titulo do traço"
+            android:textColor="@color/colorAccent"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textViewTipoDeTraco"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
             android:text="Traco em massa"
             android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/textViewTracoExibido"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textTraco" />
 
