--- a/app/src/main/res/layout/activity_tracos_salvos.xml
+++ b/app/src/main/res/layout/activity_tracos_salvos.xml
@@ -8,13 +8,13 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         tools:context=".activities.TracosSalvosActivity">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerTracosSalvos"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
