--- a/app/src/main/res/layout/activity_resultados.xml
+++ b/app/src/main/res/layout/activity_resultados.xml
@@ -1933,6 +1933,17 @@
             android:textSize="16sp" />
 
         <TextView
+            android:id="@+id/textViewTracoPara1M3DeConcretoEmMassaFormula"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28dp"
+            android:layout_marginLeft="28dp"
+            android:layout_marginTop="3dp"
+            android:text="Cc : Careia : Cb : Ca"
+            android:textAllCaps="false"
+            android:textSize="16sp" />
+
+        <TextView
             android:id="@+id/textViewTracoPara1M3DeConcretoEmMassaResultado"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
