--- a/app/src/main/res/layout/activity_resultados.xml
+++ b/app/src/main/res/layout/activity_resultados.xml
@@ -104,6 +104,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=":"
+        android:textColor="@color/colorAccent"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/editTextTracoExibidoCimento"
         app:layout_constraintEnd_toStartOf="@+id/editTextTracoExibidoAreia"
@@ -117,6 +118,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=":"
+        android:textColor="@color/colorAccent"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/editTextTracoExibidoCimento"
         app:layout_constraintEnd_toStartOf="@+id/editTextTracoExibidoBrita"
@@ -130,6 +132,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=":"
+        android:textColor="@color/colorAccent"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/editTextTracoExibidoCimento"
         app:layout_constraintEnd_toStartOf="@+id/editTextTracoExibidoAgua"
@@ -149,6 +152,7 @@
         android:gravity="center"
         android:inputType="numberDecimal"
         android:text="0"
+        android:textColor="@color/colorAccent"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/textView10"
         app:layout_constraintHorizontal_bias="0.5"
@@ -163,6 +167,7 @@
         android:gravity="center"
         android:inputType="numberDecimal"
         android:text="0"
+        android:textColor="@color/colorAccent"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/editTextTracoExibidoCimento"
         app:layout_constraintEnd_toStartOf="@+id/textView12"
@@ -178,6 +183,7 @@
         android:gravity="center"
         android:inputType="numberDecimal"
         android:text="0"
+        android:textColor="@color/colorAccent"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/editTextTracoExibidoAreia"
         app:layout_constraintEnd_toStartOf="@+id/textView13"
@@ -195,6 +201,7 @@
         android:gravity="center"
         android:inputType="numberDecimal"
         android:text="0"
+        android:textColor="@color/colorAccent"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/editTextTracoExibidoBrita"
         app:layout_constraintEnd_toEndOf="parent"
