Adição dos elementos de interface na telas de inserir dados necessários para o cálculo do traço em volume e em padiolas.

--- a/app/src/main/res/layout/activity_inserir_dados.xml
+++ b/app/src/main/res/layout/activity_inserir_dados.xml
@@ -239,11 +239,96 @@
             android:paddingTop="2dp"
             android:paddingBottom="8dp" />
 
+        <TextView
+            android:id="@+id/textViewTituloInformacoesAdicionais"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
+            android:gravity="center"
+            android:text="- Informações adicionais requeridas -"
+            android:textSize="18sp" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/textInputUmidadeDaAreia"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Umidade da areia" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/textInputInchamentoDaAreia"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Inchamento da areia para a umidade definida (%)" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:id="@+id/textViewTituloDimensoesDaPadiola"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="8dp"
+            android:text="Dimensões da padiola:"
+            android:textSize="16dp" />
+
+        <LinearLayout
+            android:id="@+id/linearLayoutDimensoesDaPadiola"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:orientation="horizontal">
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/textInputLarguraDaPadiola"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:hint="Largura (cm)" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <TextView
+                android:id="@+id/textView29"
+                android:layout_width="15dp"
+                android:layout_height="match_parent"
+                android:layout_marginTop="12dp"
+                android:layout_marginBottom="3dp"
+                android:gravity="center"
+                android:text=" X " />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/textInputComprimentoDaPadiola"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:hint="Comprimento (cm)" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+        </LinearLayout>
+
         <Button
             android:id="@+id/buttonCalcularTraco"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="16dp"
             android:text="Calcular Traço" />
 
     </LinearLayout>
